# ut_ros_visual

./: CMakeLists.txt  LICENSE  package.xml  readme.md  readme.txt
config/: utra_realsense_handeyecalibration_eye_on_base.yaml  utra_realsense_handeyecalibration_eye_on_hand.yaml
doc/: eye_calibrate_cn.md  launch_demo_cn.md  ut_visual_readme.docx
launch/: eye_calibrate.launch  grasp.launch  publish_tf.launch  start_utra.launch
scripts/: Utra.py  detect.py  publish_bottle_tf.py  rqt_graspe.py
scripts/yolov5_ros/: detect.py  requirements.txt  ros_detect.py
scripts/yolov5_ros/test/: demo.py  test.py
scripts/yolov5_ros/utils/: general.py  torch_utils.py
test/: get_pose.py  gripper.py  move_init.py  move_to_object.py  move_to_out.py  move_to_up.py  moveit_ik_demo.py  point2.py  test.py
